# wrap_transfer

./: README.md  pyproject.toml  transfer_wrapper.py
tests/: test_wrap_transfer.py
wrap_transfer/: __init__.py  cli.py  wrapper.py
