[tool.poetry]
authors = ["tpob <tpob@tpob.xyz>"]
description = ""
name = "wrap_transfer"
version = "0.1.0"

[tool.poetry.dependencies]
click = "^8.0.4"
python = ">=3.9,<3.11"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^5.2"
pyinstaller = "^4.10"

[tool.poetry.scripts]
transfer_wrapper = "wrap_transfer.cli:cli"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
